# School

./: .gitignore
Zotin/: test.hpp
Zotin/lab1/: build.sh  info.txt
Zotin/lab1/1/: main.cpp
Zotin/lab1/2/: main.cpp
Zotin/lab2/: build.sh  info.txt
Zotin/lab2/1/: main.cpp  main_old.cpp
Zotin/lab2/2/: main.cpp
Zotin/lab3/1/: main.cpp
Zotin/lab4/: bmpfilerw.hpp  build.sh
coursework1_c/: Makefile  avl.c  avl.h  brt.c  brt.h  bst.c  bst.h  main.c  output.txt  test.c  test.h
lab10_prosk/: main.py
lab1_algs/: CMakeLists.txt
lab1_algs/src/: CMakeLists.txt  main.cpp
lab1_prosk/: CMakeLists.txt
lab1_prosk/src/: #house_stream.hpp#  CMakeLists.txt  house.cpp  house.hpp  house_sort.hpp  house_stream.hpp  main.cpp
lab2_algs/: CMakeLists.txt
lab2_algs/src/: base.hpp  fgen.hpp  main.cpp  merge_sort.hpp  signleton_counter.hpp  sort.hpp
lab2_prosk/: CMakeLists.txt
lab2_prosk/src/: CMakeLists.txt  lorry.hpp  main.cpp  ship.hpp  transport_company.cpp  transport_company.hpp  transport_stream.hpp  vehicle.hpp
lab3_algs/src/: CMakeLists.txt  double_linked_list.hpp  main.cpp
lab3_prosk/: CMakeLists.txt
lab3_prosk/src/: CMakeLists.txt  base.hpp  main.cpp  matrix.cpp  matrix.hpp  matrix_stream.hpp  t2dpoint.cpp  t2dpoint.hpp  t3dpoint.cpp  t3dpoint.hpp
lab4_algs/: Makefile  tree.txt
lab4_algs/src/: binary_tree.hpp  main.cpp
lab4_prosk/src/: CMakeLists.txt  format.cpp  format.hpp  main.cpp
lab5_algs/: Makefile  hash_table.hpp  main.cpp
lab5_prosk/: list_manip.py  main.py  pyproject.toml
lab6_prosk/: main.py  str_manip.py
lab7_prosk/: file_manip.py  main.py
lab8_prosk/: main.py  words.txt
lab9_prosk/: data  main.py
site-damov/: Cargo.toml
site-damov/lab1/: help.html  shop.html
site-damov/lab2/: guestbook.php  messages.php  messages.txt  save_message.php
site-damov/lab3/: guestbook.php
site-damov/src/: agreement.html  index.html
tiny-server/src/: 404.html  500.html  agreement.html  help.html  index.html  main.rs  shop.html
(+8 files in other folders)
